Přidání edge case testů